--- a/src/Works.scss
+++ b/src/Works.scss
@@ -43,13 +43,13 @@
 
         &:nth-child(2n+1) {
             .works_item_info {
-                left: -60px;
+                left: -80px;
             }
         }
 
         &:nth-child(2n) {
             .works_item_info {
-                right: -60px;
+                right: -80px;
             }
         }
 
@@ -61,15 +61,40 @@
             top: 50%;
             transform: translate(0, -50%);
             z-index: 1;
+            box-shadow: 0 0 20px 5px #0001;
 
             h2 {
                 margin-top: 0;
             }
         }
 
+        &_used [data-text] {
+            width: 40px;
+            display: inline-block;
+            vertical-align: middle;
+            position: relative;
+            margin: 10px 10px 10px 0;
+
+            &[data-text="styled-components"] {
+                width: 50px;
+            }
+
+            &:hover:after {
+                content: attr(data-text);
+                display: block;
+                background: #fff;
+                position: absolute;
+                bottom: 80%;
+                left: 50%;
+                transform: translate(-50%);
+                padding: 5px;
+                box-shadow: 0 0 5px 0 #0004;
+            }
+        }
+
         &_children {
             width: 70%;
-            padding: 40px;
+            padding: 5vw 40px;
             // display: grid;
             // grid-gap: 20px;
             // grid-template-columns: 1fr 1fr 1fr;
