--- a/src/Works.scss
+++ b/src/Works.scss
@@ -1,69 +1,54 @@
-.works {
-    width: 80%;
-    margin: 0 auto;
+.works {    
+    h2 {
+        color: #eee;
+        text-align: center;
+    }
 
     &_item {
-        $border-color: #000;
-        $border-width: 3px;
+        $border-color: #fff;
+        $border-width: 1px;
+        min-height: 80vh;
+        display: grid;
+        grid-gap: 20px;
         position: relative;
 
-        &:nth-child(4n+1) {
-                border-top: $border-width solid $border-color;
-                border-left: $border-width solid $border-color;
-            .works_item_children {
-                margin-left: auto;
-            }
+        @media (max-width: 1099px) {
+            align-content: center;
         }
 
-        &:nth-child(4n+2) {
-            .works_item_children {
-                border-top: $border-width solid $border-color;
-                border-right: $border-width solid $border-color;
-            }
-            &:after {
-                content: '';
-                display: block;
-                width: calc(40% + 166px);
-                margin: 0 auto;
-                border-top: $border-width solid $border-color;
-            }
-        }
+        @media (min-width: 1100px) {
+            grid-template-columns: repeat(8, 1fr);
 
-        &:nth-child(4n+3) {
-            .works_item_children {
-                margin-left: auto;
-                border-bottom: $border-width solid $border-color;
-                border-left: $border-width solid $border-color;
+            &_info {
+                grid-column: 1 / 4;
             }
-        }
 
-        &:nth-child(4n) {
-            border-right: $border-width solid $border-color;
-        }
-
-        &:nth-child(2n+1) {
-            .works_item_info {
-                left: -80px;
+            &_children {
+                grid-column: 4 / 9;
             }
-        }
 
-        &:nth-child(2n) {
-            .works_item_info {
-                right: -80px;
+            &:nth-child(2n) {
+                .works_item_info {
+                    grid-column: 6 / 9;
+                    grid-row: 1 / 2;
+                }
+
+                .works_item_children {
+                    grid-column: 1 / 6;
+                    grid-row: 1 / 2;
+                }
             }
         }
 
         &_info {
-            position: absolute;
-            background: #fffe;
+            position: relative;
+            z-index: 2;
+            background: #bbbe;
             padding: 40px;
-            width: 400px;
-            top: 50%;
-            transform: translate(0, -50%);
-            z-index: 1;
             box-shadow: 0 0 20px 5px #0001;
+            align-self: center;
 
-            h2 {
+            h3 {
                 margin-top: 0;
             }
         }
@@ -77,6 +62,12 @@
 
             &[data-text="styled-components"] {
                 width: 50px;
+            }
+            &[data-text="jQuery"] {
+                width: 80px;
+            }
+            &[data-text="Mustache.js"] {
+                width: 60px;
             }
 
             &:hover:after {
@@ -93,12 +84,44 @@
         }
 
         &_children {
-            width: 70%;
-            padding: 5vw 40px;
-            // display: grid;
-            // grid-gap: 20px;
-            // grid-template-columns: 1fr 1fr 1fr;
-            // max-width: 100%;
+            position: relative;
+            z-index: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
         }
+
+        &:before {
+            content: '';
+            display: block;
+            position: absolute;
+            height: 100%;
+            border-top: $border-width solid $border-color;
+        }
+
+        &:nth-child(4n+1):before {
+            width: 75%;
+            left: 12.5%;
+            border-left: $border-width solid $border-color;
+        }
+
+        &:nth-child(4n+2):before {
+            width: 62.5%;
+            left: 12.5%;
+            border-right: $border-width solid $border-color;
+        }
+
+        &:nth-child(4n+3):before {
+            width: 50%;
+            left: 25%;
+            border-left: $border-width solid $border-color;
+        }
+
+        &:nth-child(4n):before {
+            width: 62.5%;
+            left: 25%;
+            border-right: $border-width solid $border-color;
+        }
+
     }
 }
