--- a/src/components/Works.scss
+++ b/src/components/Works.scss
@@ -1,11 +1,14 @@
+@import '../variables.scss';
+
 .works {
     h2 {
         color: #eee;
         text-align: center;
+        margin-bottom: 60px;
     }
 
     &_item {
-        $border-color: #fff;
+        $border-color: $color-accent;
         $border-width: 1px;
         position: relative;
 
