--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -18,10 +18,6 @@
   }
 }
 
-section {
-  padding: 40px;
-}
-
 .top-section {
   background: $color-accent;
   min-height: calc(100vh - 50px);
@@ -51,12 +47,33 @@ section {
 
 }
 
-h1, h2 {
-  // font-family:, Elsie, 'Cinzel Decorative', 'Vampiro One', cursive;
-  // font-family: 'Amatic SC', cursive;
-  font-family: 'Homemade Apple', cursive;
-  font-family: 'League Script', cursive;
-  font-family: 'Meddon', cursive;
+.contact {
+  background: #fff3;
+  padding-top: 0;
+  color: #fff;
+
+  &_content {
+    width: 75%;
+    margin-left: auto;
+    padding-left: 20px;
+  }
+
+  &_details {
+    margin: 80px 0 60px;
+  }
+
+  h2 {
+    margin-top: 0;
+    &:before {
+      content: '';
+      display: inline-block;
+      height: calc(60px + 1em);
+      width: 0;
+      border-right: 1px solid $color-accent;
+      margin-left: -20px;
+      margin-right: 20px;
+    }
+  }
 }
 
 $patterns: 'brickwall',
