--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -19,6 +19,7 @@
 }
 
 .top-section {
+  position: relative;
   background: $color-accent;
   min-height: calc(100vh - 50px);
   display: flex;
@@ -42,7 +43,29 @@
     margin: 0 auto;
     padding: 0 20px;
     width: auto;
+    max-width: 80%;
     z-index: 1;
+  }
+
+  .arrow {
+    position: absolute;
+    left: 50%;
+    bottom: 80px;
+    font-size: 0;
+    transform: translate(-50%);
+    padding: 10px;
+    animation: arrow-bounce 1s ease-in-out alternate infinite;
+
+    &:before, &:after {
+      content: '';
+      display: block;
+      width: 40px;
+      height: 40px;
+      transform: translate(0, -10px) rotate(45deg);
+      border: 0 solid #fff;
+      border-width: 0 2px 2px 0;
+      margin-top: -20px;
+    }
   }
 
 }
@@ -72,6 +95,28 @@
       border-right: 1px solid $color-accent;
       margin-left: -20px;
       margin-right: 20px;
+    }
+  }
+}
+
+.footer {
+  background: #fff6;
+  
+  p {
+    width: 50%;
+    margin: 0 auto;
+    padding: 0 20px;
+    text-align: right;
+    position: relative;
+
+    &:after {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      height: calc(180px + 1em);
+      border-left: 1px solid #000;
     }
   }
 }
@@ -107,4 +152,8 @@ $patterns: 'brickwall',
     background: url(/assets/patterns/#{$pattern}/#{$pattern}.png) repeat;
     background-attachment: fixed;
   }
+}
+
+@keyframes arrow-bounce {
+  from {transform: translate(-50%, -20px);}
 }
