--- a/src/components/Works.scss
+++ b/src/components/Works.scss
@@ -15,6 +15,7 @@
         position: relative;
 
         &_content {
+            padding: 40px 0;
             min-height: 80vh;
             display: grid;
             grid-gap: 20px;
@@ -149,5 +150,24 @@
             transform: translate(-150%);
         }
 
+    }
+}
+
+.banner-box {
+    max-width: 750px;
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    margin: 0 auto 20px;
+
+    &:before {
+        content: '';
+        display: inline-block;
+        padding-top: 13.33333%;
+    }
+
+    video {
+        position: absolute;
+        top: 0;
     }
 }
