--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -18,58 +18,6 @@
   }
 }
 
-.top-section {
-  position: relative;
-  background: $color-accent;
-  min-height: calc(100vh - 50px);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  // mix-blend-mode: screen;
-
-  .frame {
-    max-width: 600px;
-    margin: 0 auto;
-    border: 1px solid #333;
-    padding: 50px;
-    margin-top: -1.5rem;
-  }
-
-  h1 {
-    color: #fff;  
-    font-size: 2.5rem;
-    background: $color-accent;
-    margin: 0 auto;
-    padding: 0 20px;
-    width: auto;
-    max-width: 90%;
-    z-index: 1;
-  }
-
-  .arrow {
-    position: absolute;
-    left: 50%;
-    bottom: 80px;
-    font-size: 0;
-    transform: translate(-50%);
-    padding: 10px;
-    animation: arrow-bounce 1s ease-in-out alternate infinite;
-
-    &:before, &:after {
-      content: '';
-      display: block;
-      width: 40px;
-      height: 40px;
-      transform: translate(0, -10px) rotate(45deg);
-      border: 0 solid #fff;
-      border-width: 0 2px 2px 0;
-      margin-top: -20px;
-    }
-  }
-
-}
-
 .contact {
   background: #fff3;
   padding-top: 0;
@@ -108,6 +56,15 @@
     padding: 0 20px;
     text-align: right;
     position: relative;
+
+    @media (max-width: 767px) {
+      width: 75%;
+      margin-left: auto;
+
+      &:after {
+        left: 0;
+      }
+    }
 
     &:after {
       content: '';
@@ -152,8 +109,4 @@ $patterns: 'brickwall',
     background: url(/assets/patterns/#{$pattern}/#{$pattern}.png) repeat;
     background-attachment: fixed;
   }
-}
-
-@keyframes arrow-bounce {
-  from {transform: translate(-50%, -20px);}
 }
