change button font

--- a/src/components/App.scss
+++ b/src/components/App.scss
@@ -10,7 +10,7 @@
     padding: 10px 20px;
     background: $color-accent;
     color: #fff;
-    font: normal 600 1rem/1 'Raleway';
+    font: normal 700 1rem/1 'Lato';
   }
 
   .works_item image {
